namespace PhoneBookLab2.Core;

public readonly record struct AbonentRecord(string Name, string Number);
